--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ before_install:
 
 #main commands for travis, will add test suite here eventually
 script: 
+   - curl -vsf 'http://localhost:8080/' &> /dev/stdout
    - cat /tmp/error.log
