--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,4 @@ before_install:
 
 #main commands for travis, will add test suite here eventually
 script: 
-   - curl -vsf 'http://localhost/' &> /dev/stdout
-   - cat /tmp/error.log
+    - curl -fv http://localhost &> /dev/stdout
