--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ services:
     - docker
 
 #commands executed before running tests/actions
+#MUST use port mapping, general port 80 does not play nice with curl on travis ci
 before_install:
     - docker build -t webserver .
     - docker run --rm -d -p 8080:80 webserver
 
 #main commands for travis, will add test suite here eventually
+#must curl port 8080, did not work when using just port 80
 script: 
     - curl -4fv http://localhost:8080 &> /dev/stdout
