--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,17 @@
 #tells travis we need to use superuser privileges, for docker
 sudo: required
 
-#tells travis we need to use docker
-services:
-    - docker
-
-#commands executed before running tests/actions
-#MUST use port mapping, general port 80 does not play nice with curl on travis ci
-before_install:
-    - docker build -t webserver .
-    - docker run --rm -d -p 8080:80 webserver
-
 #main commands for travis, will add test suite here eventually
 #must curl port 8080, did not work when using just port 80
 script: 
     - curl -4fv http://localhost:8080 &> /dev/stdout
 
+#deploy stage, new attempt to deploy to AWS s3
 deploy:
-    provider: elasticbeanstalk
+    provider: s3
     region: "us-east-2"
-    app: "a website"
-    env: "a-website-env"
-    bucket_name: "elasticbeanstalk-us-east-2-897424296515"
-    bucket_path: "a website"
+    bucket: "a-website-by-rephlekt"
+    skip_cleanup: true
     on:
         branch: master
     access_key_id: "$AWS_ACCESS_KEY"
