--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,4 @@ deploy:
         branch: master
     access_key_id: "$AWS_ACCESS_KEY"
     secret_access_key: "$AWS_SECRET_KEY"
+    acl: public_read
