--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
     bucket: "a-website-by-rephlekt"
     skip_cleanup: true
     on:
-        branch: master
+        branch: dockerless_static_hosting
     access_key_id: "$AWS_ACCESS_KEY"
     secret_access_key: "$AWS_SECRET_KEY"
     acl: public_read
