--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 deploy:
     provider: s3
     region: "us-east-2"
-    bucket: a-website-by-rephlekt
+    bucket: "a-website-by-rephlekt"
     skip_cleanup: true
     on:
         branch: dockerless_static_hosting
