--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
     on:
         branch: dockerless_static_hosting
     access_key_id: "$AWS_ACCESS_KEY"
-    secret_access_key: "$AWS_SECRET_KEY
+    secret_access_key: "$AWS_SECRET_KEY"
